<resources>
    <string name="app_name">CafeApplication</string>
    <string name="action_settings">Settings</string>

    <string name="text_intro">Desserts</string>

    <string name="donut_content_description"> Donut Image</string>
    <string name="froyo_content_description"> Froyo Image</string>
    <string name="icecream_content_description"> Icecream Image</string>

    <string name="donut_description"> Donuts are glazed and sprinkled with candy</string>
    <string name="froyo_description"> FroYo is premium self-serve frozen yogurt
    </string>
    <string name="icecream_description"> Ice cream sandwiches have chocolate wafers
        and vanilla filling</string>
    <string name="donut_order_message"> You have ordered a donut</string>
    <string name="froyo_order_message"> You have ordered a Froyo</string>
    <string name="icecream_order_message"> You have ordered an Icecream</string>

    <string name="title_activity_order"> Order Activity</string>

    <string name="name_label">Name</string>
    <string name="address_label">Address</string>
    <string name="phone_label">Phone</string>
    <string name="note_label">Note</string>

    <string name="name_hint">Enter your name</string>
    <string name="address_hint">Enter your address</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="note_hint">Enter note</string>

    <string name="choose_deliver_method"> Choose a delivery method</string>
    <string name="same_day"> Same Day Service</string>
    <string name="next_day"> Next Day Service</string>
    <string name="pick_up"> Pick Up</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>

</resources>